# osmo

./: .README.md.un~  .gitignore  .requirements.txt.un~  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt
osmo/: base.py  basic.py  log.py  rdbms.py  util.py  wsgi.py
osmo/app/: application.py  singleton.py
osmo/core/: gettextutils.py  jsonutils.py  log.py
osmo/db/: api.py  models.py
osmo/web/: README.md  flaskapp.py  glogging.py  wsgiapp.py
tests/: README.md  requirements.txt  test.conf  test_base.py  test_db.py
tests/app/: README.md  app.py  test.conf
tests/db/: README.md  base.py  requirements.txt  test.conf  test.py  users.py
tests/log/: README.md  test.py
tests/web/: README.md  requirements.txt  test.conf  test_wsgi.py  testapp.py  testctrl.py  testflask.py  zero.conf  zero.py
tests/web/templates/: index.html
tests/web/views/: index.py
zara/db/: api.py  models.py
zara/log/: jsonutils.py  log.py
zara/web/: application.py  flaskapp.py  singleton.py
