[metadata]
name = osmo
author = jinlong.yang
author-email = 1990yangjinlong@163.com
summery = openstack module
license = BSD
classifier =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Framework :: Flask
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    osmo
