[metadata]
name = osmo
author = jinlong.yang
author-email = 1990yangjinlong@163.com
summary = python tools library: through use openstack library, to provider convenience for flask application.
description-file =
    README.rst
license = BSD
classifier =
    Development Status :: 1 - Planning
    Environment :: Python Plugins
    Framework :: Flask
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    osmo
