[metadata]
name = osmo
author = jinlong.yang
author-email = 1990yangjinlong@163.com
summary = python tools library for daemon or web application
home-page = https://github.com/yyjinlong/osmo
classifier =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Framework :: Flask
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    osmo
